# sub-discord-bot

./: .gitignore  Cargo.toml  README.md
src/: main.rs  mention.rs
