[package]
name = "sub-discord-bot"
version = "0.1.0"
authors = ["wonjongin <wji0227@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }