[package]
name = "sub-discord-bot"
version = "0.1.0"
authors = ["wonjongin <wji0227@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
regex = "1"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    # "framework",
    "gateway",
    "http",
    "model",
    # "standard_framework",
    "utils",
    "rustls_backend",
]
version = "0.10"